# pico-pigweed-practice

./: .gitignore  .gitmodules  README.md  build.sh  pyproject.toml  requirements.txt  west.yml
.devcontainer/: Dockerfile  devcontainer.json
apps/: west.yml
apps/pw_rpc/: CMakeLists.txt  app.overlay  main.cpp  main.h  prj.conf  service.proto
apps/pw_rpc/proto/: service.proto
apps/simple/: CMakeLists.txt  main.cpp  prj.conf
manifest/: west.yml
src/: CMakeLists.txt  main.cpp  prj.conf
tools/: README.md  client.py  communication_utils.py  console.py  nanopb_pb2.py  nanopb_pb2.pyi  service_pb2.py  service_pb2.pyi
