[project]
name = "pico-pigweed-practice"
version = "0.1.0"
description = "Practice project for Pigweed and Zephyr on Pico W"
dependencies = [
	"pyserial>=3.5",
	"pigweed",
	"ruff"
]

[tool.ruff]
line-length = 100

ignore = [
	"D100",  # Missing docstring in public module
	"D104",  # Missing docstring in public package
	"D107"   # Missing docstring in __init__
]


[tool.ruff.flake8-bugbear]
extend-immutable-calls = []
